<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">个人简历</string>
    <string name="hello_world">Hello world!</string>
    <string name="sweep_tel_num">10010</string>
    <string name="sweep_hint1">按住滑动</string>
    <string name="sweep_hint2">手机联系</string>
    <string name="sweep_call">通话</string>
    <string name="sweep_msg">信息</string>
    <string name="update_info">0%</string>
    <string name="splash_txt_personal">个人简历</string>
    <string name="splash_txt_resume">Resume</string>
    <string name="splash_txt_version">V1.0</string>
    <string name="splash_txt_owner">By Harlan</string>
    
    <string name="home_head">应用开发工程师\n陈贤达个人简历</string>
    <string name="home_baseinfo">基本资料</string>
    <string name="home_edu">教育背景</string>
    <string name="home_rtconn">即时通讯</string>
    <string name="home_blog">我的博客</string>
    <string name="home_workintent">求职意向</string>
    <string name="home_workablity">工作能力</string>
    <string name="home_projectexp">项目经验</string>
    <string name="home_salary">期待薪资</string>
    <string name="home_otherability">其他技能</string>
    <string name="home_update">简历更新</string>
    <string name="home_history">历史版本</string>
    <string name="home_copyright">版权说明</string>
    <string name="baseinfo_name">姓名:\n陈贤达</string>
    <string name="baseinfo_sex">性别:\n男性</string>
    <string name="baseinfo_birthday">出生年月:\n1992.04.07</string>
    <string name="baseinfo_nation">民族:\n汉族</string>
    <string name="baseinfo_height">身高:\n175cm</string>
    <string name="baseinfo_nativeplace">籍贯:\n广东韶关</string>
    <string name="baseinfo_health">健康状况:\n良好</string>
    <string name="baseinfo_nowplace">现居住地:\n广东广州</string>
    <string name="eduinfo_info">  2013年毕业于华南理工广州学院。</string>
    <string name="eduinfo_maincourse">主修课程:</string>
    <string name="eduinfo_course1">数据结构A</string>
    <string name="eduinfo_course2">java编程思想</string>
    <string name="eduinfo_course3">现代通信概论</string>
    
    <string name="workable_info1">1年销售经验</string>
    <string name="workable_info2">自学三个月android能够熟练使用SDK工具以及API进行编程。了解Android系统架构，熟练开发应用程序，包括UI、网络，多线程等方面。</string>
    <string name="workable_info3">熟悉windows编程环境，熟练使用Eclipse，SVN等工具。</string>
    <string name="workable_info4">有较强的设计能力以及分析处理问题的能力。</string>
    <string name="workable_info5">熟练的技术文档阅读与撰写能力。</string>
    <string name="workable_info6">有良好的团队精神、学习能力和钻研精神。 </string>
    <string name="workable_info7">能适应中短期出差。</string>
    <string name="workintent_info1">专注于移动领域开发，坚持不懈，力争成为行业的翘楚。</string>
    <string name="workintent_info2">对待工作，勇担责任，不怕吃苦，以战胜工作中的困难为乐趣。</string>
    <string name="workintent_info3">在生活上，以诚待人，言出必行，热爱生活，乐观向上。</string>
    <string name="workintent_info4">在学习上，积极探究新知识，不断进步。</string>
    <string name="workintent_info5">健康快乐生活每一天~~</string>
    <string name="otherability_info1">能够熟练使用photoshop软件。</string>
    <string name="otherability_info2">熟悉会声会影软件，能够进行视频剪辑，音频合成等。</string>
    <string name="otherability_info3">能够使用AE进行视频音频合成，增加常用的特效等。</string>
    <string name="salary_title_salary">月薪：</string>
    <string name="salary_info_salary">3K及以上</string>
    <string name="salary_title_welfare">福利：</string>
    <string name="salary_info_welfare1">五险一金</string>
    <string name="salary_info_welfare2">双休法定节假日等</string>
    <string name="salary_info_welfare3">公平良好的激励制度</string>
    <string name="proexp_tglbtn_checked">循环展示</string>
    <string name="proexp_tglbtn_unchecked">顺序展示</string>
    <string name="proexp_index">目录</string>
    <string name="proexp_index1">项目一：</string>
    <string name="proexp_index2">项目二：</string>
    <string name="proexp_index3">项目三：</string>
    <string name="proexp_index4">项目四：</string>
    <string name="proexp_index5">项目五：</string>
    <string name="proexp_work_station">开发平台：</string>
    <string name="proexp_work_info">项目介绍：</string>
    <string name="proexp_work_number">项目时间及人数：</string>
    <string name="proexp_work_task">个人职责：</string>
    <string name="rtconn_txt_qq">604834958</string>
    <string name="rtconn_txt_email">cxd9257@126.com</string>
    <string name="blog_name">CSDN ID：\ncxd323</string>
    <string name="blog_url">http://blog.csdn.net/cxd520123</string>
    <string name="update_versionname">当前版本:\nV1.0</string>
    <string name="update_versiondate">发布时间:\n2013.03.03</string>
    <string name="update_btn">查找新版本</string>
    <string name="history_info1_title">版本号:V1.0</string>
    <string name="history_info1_time">发布时间：2013.03.03</string>
    <string name="history_info1_info">版本说明:\n1.基础版本\n2.项目经验截止到2013年03月</string>
    <string name="copyright_info1">  本app为参照Harlan所写改进而成，仅作为个人求职使用，无商业用途。</string>
    <string name="copyright_info2">  部分图片资源来自互联网,版权归原作者所有。</string>
    <string name="copyright_info3">  若引用资源侵犯了您的权利,请告知,本人将尽快作出妥善处理。</string>
    
</resources>