<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" 
    android:background="@drawable/bg5">

    <TextView
        android:id="@+id/proexp_txt_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/proexp_index" />

    <TextView
        android:id="@+id/proexp_txt_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/proexp_work_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textColor="@android:color/black"
         android:textSize="18sp"
        android:text="@string/proexp_work_station" />

    <TextView
        android:id="@+id/proexp_txt_work_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/proexp_work_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/proexp_work_info" />

    <TextView
        android:id="@+id/proexp_txt_work_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/app_name" />
    
    <TextView
        android:id="@+id/proexp_work_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/proexp_work_number" />
    
     <TextView
        android:id="@+id/proexp_txt_work_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/proexp_work_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/proexp_work_task" />
    
     <TextView
        android:id="@+id/proexp_txt_work_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/app_name" />

</LinearLayout>