<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_orange"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tabBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_gradient_blue"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/BtnSlide"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:background="@drawable/indicator_selector"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrow_back_orange" />

            <ImageView
                android:id="@+id/img_slide"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="0px"
                android:contentDescription="@string/app_name"
                android:padding="0px"
                android:src="@drawable/img_baseinfo" />
      </LinearLayout>

        <TextView
            style="@style/style_title_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home_baseinfo" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/baseinfo_content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_personface" />

        <TextView
            android:id="@+id/txt_name"
            style="@style/style_baseinfo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/img_photo"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/img_photo"
            android:text="@string/baseinfo_name" />

        <TextView
            android:id="@+id/txt_birthday"
            style="@style/style_baseinfo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txt_name"
            android:layout_below="@+id/txt_name"
            android:text="@string/baseinfo_birthday" />

    	<TextView
        android:id="@+id/txt_sex"
        style="@style/style_baseinfo_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/img_photo"
        android:layout_alignLeft="@+id/img_photo"
        android:text="@string/baseinfo_sex" />
    
        <TextView
            android:id="@+id/txt_nation"
            style="@style/style_baseinfo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_sex"
       		 android:layout_alignLeft="@+id/txt_sex"
            android:text="@string/baseinfo_nation" />
        
        <TextView
            android:id="@+id/txt_height"
            style="@style/style_baseinfo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_nation"
       		android:layout_alignLeft="@+id/txt_nation"
            android:text="@string/baseinfo_height" />
        
        <TextView
            android:id="@+id/txt_nativeplace"
            style="@style/style_baseinfo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_sex"
            android:layout_below="@+id/txt_birthday"
       		android:layout_alignLeft="@+id/txt_birthday"
            android:text="@string/baseinfo_nativeplace" />
        
        <TextView
            android:id="@+id/txt_nowplace"
            style="@style/style_baseinfo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_nativeplace"
       		android:layout_alignLeft="@+id/txt_nativeplace"
            android:text="@string/baseinfo_nowplace" />
        
        <TextView
            android:id="@+id/txt_health"
            style="@style/style_baseinfo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_nowplace"
       		android:layout_alignLeft="@+id/txt_nowplace"
            android:text="@string/baseinfo_health" />
    </RelativeLayout>

<!--     <ImageView -->
<!--         android:id="@+id/img_ic_exit" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignRight="@+id/BtnSlide" -->
<!--         android:contentDescription="@string/app_name" -->
<!--         android:layout_alignParentBottom="true" -->
<!--         android:layout_alignParentLeft="true" -->
<!--         android:src="@drawable/ic_exit" -->
<!--         android:background="@drawable/grey_selector"/> -->
    

</LinearLayout>