<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="@android:color/transparent">

      <TextView
        android:id="@+id/sweep_txt_hint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/sweep_img_hint"
         android:layout_marginRight="-30dp"
        android:gravity="center_vertical"
        android:text="@string/sweep_hint1"
        android:textColor="@color/sweepgreen"
        android:textSize="24sp" />
    
    <ImageView
        android:id="@+id/sweep_img_hint"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:layout_centerInParent="true"
        android:src="@drawable/img_call" />

    <TextView
        android:id="@+id/sweep_txt_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/sweep_img_hint"
        android:layout_marginLeft="-30dp"
        android:gravity="center_vertical"
        android:text="@string/sweep_hint2"
         android:textColor="@color/sweeporange"
        android:textSize="24sp" />

</RelativeLayout>