<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@drawable/bg3"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/tabBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_gradient_grey"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/BtnSlide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/indicator_selector"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrow_back_orange" />

            <ImageView
                android:id="@+id/img_slide"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="0px"
                android:contentDescription="@string/app_name"
                android:padding="0px"
                android:src="@drawable/img_salary" />
        </LinearLayout>

        <TextView
            style="@style/style_title_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home_salary" />
    </LinearLayout>

	     <RelativeLayout
	         android:id="@+id/salary_content_view"
	         android:layout_width="match_parent"
	         android:layout_height="match_parent"
	         android:layout_marginLeft="5dp" 
	         android:layout_marginRight="5dp">
            
	     <ImageView
	         android:id="@+id/salary_img_salary"
	         android:layout_width="130dp"
	         android:layout_height="130dp"
	         android:contentDescription="@string/app_name"
	         android:padding="10dp"
	         android:src="@drawable/img_salary_dollar" />

	     <TextView
	         android:id="@+id/salary_title_salary"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignParentTop="true"
	         android:layout_marginLeft="30dp"
	         android:layout_marginTop="20dp"
	         android:layout_toRightOf="@+id/salary_img_salary"
	         android:textSize="36sp"
	         android:textStyle="bold"
	         android:textColor="@color/orangedeep"
	         android:text="@string/salary_title_salary" />

	     <TextView
	         android:id="@+id/salary_info_salary"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignLeft="@+id/salary_title_salary"
	         android:layout_below="@+id/salary_title_salary"
	         android:layout_marginTop="15dp"
	         android:textSize="30sp"
	         android:textStyle="bold"
	         android:textColor="@color/orangelight"
	         android:text="@string/salary_info_salary" />

	     <ImageView
	         android:id="@+id/salary_img_welfare"
	         android:layout_width="130dp"
	         android:layout_height="130dp"
	         android:contentDescription="@string/app_name"
	         android:layout_alignParentRight="true"
	         android:layout_below="@+id/salary_title_welfare"
	         android:src="@drawable/img_salary_welfare" />

	     <TextView
	         android:id="@+id/salary_title_welfare"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignRight="@+id/salary_img_salary"
	         android:layout_below="@+id/salary_img_salary"
	         android:text="@string/salary_title_welfare"
	         android:textColor="@color/orangedeep"
	         android:textSize="36sp"
	         android:textStyle="bold" />

	     <TextView
	         android:id="@+id/salary_info_welfare1"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignLeft="@+id/salary_title_welfare"
	         android:layout_below="@+id/salary_title_welfare"
	         android:layout_marginTop="10dp"
	         android:text="@string/salary_info_welfare1"
	         android:textColor="@color/orangelight"
	         android:textSize="30sp"
	         android:textStyle="bold" />

	     <TextView
	         android:id="@+id/salary_info_welfare2"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignLeft="@+id/salary_title_welfare"
	         android:layout_alignRight="@+id/salary_info_welfare1"
	         android:layout_below="@+id/salary_info_welfare1"
	         android:layout_marginTop="10dp"
	         android:text="@string/salary_info_welfare2"
	         android:textColor="@color/orangelight"
	         android:textSize="30sp"
	         android:textStyle="bold" />
	     
	     <TextView
	         android:id="@+id/salary_info_welfare3"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignLeft="@+id/salary_title_welfare"
	         android:layout_below="@+id/salary_info_welfare2"
	         android:layout_marginTop="10dp"
	         android:text="@string/salary_info_welfare3"
	         android:textColor="@color/orangelight"
	         android:textSize="30sp"
	         android:textStyle="bold" />
	     
	     </RelativeLayout>

    
</LinearLayout>