<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@drawable/bg3"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tabBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_gradient_blue">
        
       <LinearLayout
        android:id="@+id/BtnSlide"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:background="@drawable/indicator_selector"
        android:orientation="horizontal" >
      <ImageView
        android:id="@+id/img_arrow"
      	android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:layout_marginRight="-5dp"
        android:layout_marginLeft="-5dp"
        android:src="@drawable/arrow_back_orange"/>

        <ImageView
            android:id="@+id/img_slide"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:layout_margin="0px"
            android:padding="0px"
            android:src="@drawable/img_edu"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home_edu"
            style="@style/style_title_txt"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/eduinfo_content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/eduinfo_img_nupt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_nupt"/>

        <TextView
            android:id="@+id/eduinfo_txt_maincourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/eduinfo_img_nupt"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/eduinfo_maincourse"/>

        <TextView
            android:id="@+id/eduinfo_txt_course1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eduinfo_txt_maincourse"
            android:layout_below="@+id/eduinfo_txt_maincourse"
            android:layout_marginTop="10dp"
      		style="@style/style_eduinfo_txt"
            android:text="@string/eduinfo_course1"/>

        <TextView
            android:id="@+id/eduinfo_txt_course2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eduinfo_txt_course1"
            android:layout_below="@+id/eduinfo_txt_course1"
            android:layout_marginTop="10dp"
            style="@style/style_eduinfo_txt"
            android:text="@string/eduinfo_course2"/>

        <TextView
            android:id="@+id/eduinfo_txt_course3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eduinfo_txt_course2"
            android:layout_below="@+id/eduinfo_txt_course2"
            android:layout_marginTop="10dp"
            style="@style/style_eduinfo_txt"
            android:text="@string/eduinfo_course3"/>

        <TextView
            android:id="@+id/eduinfo_txt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/eduinfo_img_nupt"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="45dp"
            android:layout_toRightOf="@+id/eduinfo_img_nupt"
            android:gravity="center"
            android:text="@string/eduinfo_info"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eduinfo_txt_course4"
            style="@style/style_eduinfo_txt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/eduinfo_txt_course3"
            android:layout_marginTop="15dp"
            android:text="  C\C＋＋语言程序设计" />
        <TextView
            android:id="@+id/eduinfo_txt_course5"
            style="@style/style_eduinfo_txt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/eduinfo_txt_course4"
            android:layout_marginTop="15dp"
            android:text="  网络基础……" />

    </RelativeLayout>

</LinearLayout>